<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectCity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_city"
        android:gravity="center"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/select_city_radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/city_first_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Saint_Petersburg" />

        <RadioButton
            android:id="@+id/city_second_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Moscow" />

        <RadioButton
            android:id="@+id/city_third_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Saratov" />

        <RadioButton
            android:id="@+id/city_manually_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_to_write_city_name" />
    </RadioGroup>

    <EditText
        android:id="@+id/writeCityNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/to_write_city_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_city_radioGroup"
        android:autofillHints="@string/to_write_city_name" />



</androidx.constraintlayout.widget.ConstraintLayout>