<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:background="@color/blue_De_France"
    android:orientation="vertical">


        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/Saint_Petersburg"
            android:textSize="25sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_button"
            tools:text="Location" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_text_view"
            tools:text="14.08.2020" />

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date_text_view"
            app:layout_constraintTop_toBottomOf="@+id/location_text_view"
            tools:text="22:10" />

        <TextView
            android:id="@+id/temperature_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="15° С"
            android:textSize="45sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_text_view"
            tools:text="15° С" />


        <ImageView
            android:id="@+id/rainfall_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/cloude"
            app:layout_constraintBottom_toTopOf="@+id/pressure_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/date_text_view" />

        <ImageButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="16dp"
            android:src="@drawable/ic_action_update"
            android:text="@string/update"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="16dp"
            android:src="@drawable/ic_action_settings"
            android:text="@string/update"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <TextView
            android:id="@+id/wind_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/wind_text_view"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_text_view" />

        <TextView
            android:id="@+id/pressure_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pressure_text_view"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/wind_textView" />

        <Button
            android:id="@+id/additional_information_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/additional_information"
            android:textSize="15sp"
            android:visibility="gone"
            app:backgroundTint="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressure_textView" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/nextWeather_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_De_France"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressure_textView">

        </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>

